[gd_scene load_steps=18 format=3 uid="uid://bfan1cxcaqfbu"]

[ext_resource type="Script" uid="uid://b6lv1768mwh4d" path="res://scripts/console_panel.gd" id="1_7qxwa"]
[ext_resource type="FontFile" uid="uid://bp83qou1fslbk" path="res://assets/fonts/PixelOperator8.ttf" id="2_her8x"]
[ext_resource type="Script" uid="uid://du1dou86xpprf" path="res://scripts/scriptvalidator.gd" id="2_kxyyb"]
[ext_resource type="Texture2D" uid="uid://blj7xjycbvr2i" path="res://assets/images/console1.png" id="3_buc2e"]
[ext_resource type="Script" uid="uid://df3vh6ys1xxhu" path="res://scripts/datatype_changer.gd" id="4_bptkf"]
[ext_resource type="Texture2D" uid="uid://cw27pmkod1t64" path="res://assets/images/console2.png" id="4_oh7pb"]
[ext_resource type="Texture2D" uid="uid://dcydk3mfwaanh" path="res://assets/images/console3.png" id="7_ifr1o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifr1o"]
bg_color = Color(0.156863, 0.172549, 0.235294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ujx2k"]
font = ExtResource("2_her8x")
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jrj24"]
bg_color = Color(0.00784314, 0.0470588, 0.0901961, 1)

[sub_resource type="Gradient" id="Gradient_ifr1o"]
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.99333334, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jrj24"]
gradient = SubResource("Gradient_ifr1o")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rx28n"]
size = Vector2(64, 96)

[sub_resource type="Animation" id="Animation_vj220"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Terminal/Panel:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Terminal/Panel:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_hx16o"]
resource_name = "pop_down"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Terminal/Panel:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Terminal/Panel:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_ifr1o"]
resource_name = "pop_up"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Terminal/Panel:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Terminal/Panel:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w38mj"]
_data = {
&"RESET": SubResource("Animation_vj220"),
&"pop_down": SubResource("Animation_hx16o"),
&"pop_up": SubResource("Animation_ifr1o")
}

[node name="Console" type="Area2D"]
collision_layer = 16
script = ExtResource("1_7qxwa")
base_text = "enter code..."
fixed_var = "var number = 5
const SPEED = 10"

[node name="TextValidator" type="Node2D" parent="."]
script = ExtResource("2_kxyyb")

[node name="DataType_Changer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_bptkf")

[node name="Terminal" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = -150.0
offset_top = -141.0
offset_right = 150.0
offset_bottom = 259.0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(150, 200)

[node name="Panel" type="Panel" parent="Terminal"]
z_index = 10
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 29.999994
offset_top = -44.999973
offset_right = -30.0
offset_bottom = 141.66669
grow_horizontal = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(125, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_ifr1o")

[node name="MarginContainer" type="MarginContainer" parent="Terminal/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Terminal/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="HBoxContainer" type="HBoxContainer" parent="Terminal/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
label_settings = SubResource("LabelSettings_ujx2k")

[node name="Limit" type="Label" parent="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_ujx2k")

[node name="Button" type="Button" parent="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/font = ExtResource("2_her8x")
theme_override_font_sizes/font_size = 8
text = "run"

[node name="Exit" type="Button" parent="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_her8x")
theme_override_font_sizes/font_size = 8
text = "X"

[node name="CodeEdit" type="CodeEdit" parent="Terminal/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.133333, 0.545098, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.133333, 0.298039, 0.133333, 1)
theme_override_fonts/font = ExtResource("2_her8x")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_jrj24")
theme_override_colors/line_number_color = Color(0.133333, 0.545098, 0.133333, 1)
caret_blink = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="PointLight2D" type="PointLight2D" parent="Terminal/Panel/MarginContainer/VBoxContainer"]
z_index = -9
position = Vector2(118.260864, 176.63766)
scale = Vector2(1.6304345, 1.2681161)
energy = 2.8
blend_mode = 2
range_z_min = -1023
range_z_max = 500
texture = SubResource("GradientTexture2D_jrj24")
offset = Vector2(-2, -72)
texture_scale = 2.3
height = 535.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_rx28n")

[node name="Console" type="Sprite2D" parent="."]
position = Vector2(0, 40)
texture = ExtResource("3_buc2e")

[node name="Console_Near" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
texture = ExtResource("4_oh7pb")

[node name="Console_Off" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
texture = ExtResource("7_ifr1o")

[node name="PopUp Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w38mj")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Terminal/Panel/MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="focus_entered" from="Terminal/Panel/MarginContainer/VBoxContainer/CodeEdit" to="." method="_on_code_edit_focus_entered"]
[connection signal="focus_exited" from="Terminal/Panel/MarginContainer/VBoxContainer/CodeEdit" to="." method="_on_code_edit_focus_exited"]
[connection signal="lines_edited_from" from="Terminal/Panel/MarginContainer/VBoxContainer/CodeEdit" to="." method="_on_code_edit_lines_edited_from"]
